# my-tools

./: .gitignore  README.md  URGENT_SETUP.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release.ps1  temp_admin_check.rs  test_long_line.txt  vite.config.js
.github/instructions/: main.instructions.md
.github/workflows/: build.yml
.trae/rules/: project_rules.md
docs/: AUTO_UPDATE.md  ENV_SETUP.md  GITHUB_SECRETS_SETUP.md  GLOBAL_SHORTCUTS.md  QUICK_RELEASE.md  RELEASE.md  SYSTEM_TRAY.md  TAURI_CALLBACK_WARNING.md  TODO.md  UPDATER_SECURITY.md  UPDATER_SETUP.md  UPDATE_DATA_LOSS.md  UPDATE_DATA_PROTECTION.md  UPDATE_IMPLEMENTATION.md  UPDATE_TROUBLESHOOTING.md  api.md  设置导入导出功能说明.md
scripts/: build.ps1  git-manager.ps1  release-generator.ps1  release-workflow.ps1  tauri-build.ps1  verify-updater-keys.ps1  version-manager.ps1
src/: App.vue  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: env_var.rs  lib.rs  recent_projects.rs
src/assets/config/: commit.json
src/assets/styles/: about-dialog.scss  commit-generator.scss  env-var-card.scss  env-var-manager.scss  flie-search.scss  global.scss  path-check-dialog.scss  preview-panel.scss  settings-export-import.scss  variables.scss
src/components/: AboutDialog.vue  ClassifyRulesManager.vue  CommitTypesManager.vue  ConfigHistoryDialog.vue  CustomTitlebar.vue  EnvVarCard.vue  EnvVarManager.vue  EnvVarManager_backup.vue  EnvVarManager_new.vue  FileIcon.vue  FilePreviewDialog.vue  FileTypesManager.vue  PathCheckDialog.vue  PreviewPanel.vue  ProjectSettingsDialog.vue  SettingsDialog.vue  Titlebar.vue
src/router/: index.js
src/stores/: commitTypes.js  fileSearchSettings.js  fileTypes.js  settings.js  update.js
src/utils/: shortcutManager.js
src/views/: CommitGenerator.vue  EnvVarManager.vue  FileSearch.vue  Hotkeys.vue  Projects.vue  Settings.vue
