[package]
name = "my-tools"
version = "1.3.1"
description = "A Tauri App"
authors = ["caolib"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-window-state = "2.0.0"
tauri-plugin-process = "2.0.0"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
winreg = "0.55.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
dirs = "5.0"
reqwest = { version = "0.11", features = ["json"] }
urlencoding = "2.1"
tokio = { version = "1.0", features = ["full"] }
base64 = "0.22"
image = "0.24"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "winuser",
    "shellapi",
    "wingdi",
    "windef",
    "minwindef",
    "winnt",
] }
